--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -3,7 +3,8 @@
 <html>
 <head>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,35 +13,47 @@
 </head>
 <body>
 <div class="sidenav">
-        {% if not user.is_authenticated %}
-            <a href="/home/">Home</a>
-            <a href="/login/">Zaloguj</a>
-            <a href="/register/">Rejestracja</a>
-        {% elif  user.is_authenticated %}
-            <a href="/home/">Home</a>
-            <a href="/profile/{{ user.username }}">Mój profil</a>
-            <a href="/createList/">Stwórz listę</a>
-            <a href="/myLists/">Moje listy</a>
-            <a href="/logout/">Wyloguj</a>
+    {% if not user.is_authenticated %}
+    <a href="/home/">Home</a>
+    <a href="/login/">Zaloguj</a>
+    <a href="/register/">Rejestracja</a>
+    {% elif user.is_authenticated %}
+    <a href="/home/">Home</a>
+    <a href="/profile/{{ user.username }}">Mój profil</a>
+    <a href="/notifications/">Powiadomienia
+        {% if notifications > 0 %}
+        ( {{ request.unread_notification_count }} )
         {% endif %}
+    </a>
+    <a href="/createList/">Stwórz listę</a>
+    <a href="/myLists/">Moje listy</a>
+    <a href="/logout/">Wyloguj</a>
+    {% endif %}
+</div>
+
+<div id=content", name="content" , class="main">
+    {% if user.is_authenticated %}
+    <div id="loginScreen">
+        <p>Witaj, <a href="/profile/{{ user.username }}/">{{ user.username }}</a>, jesteś zalogowany! <a href="/logout">Wyloguj
+            się</a></p>
     </div>
-
-    <div id=content", name="content", class="main">
-        {% if user.is_authenticated %}
-            <div id="loginScreen">
-                <p>Witaj, <a href="/profile/{{ user.username }}/">{{ user.username }}</a>, jesteś zalogowany!  <a href="/logout">Wyloguj się</a></p>
-            </div>
-        {% endif %}
-        <div class="row justify-content-center">
-            {% block content %}
-            {% endblock %}
+    {% endif %}
+    <div class="row justify-content-center">
+        {% block content %}
+        {% endblock %}
 
 
-        </div>
     </div>
+</div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
