--- a/WishLists/templates/mySpecificList.html
+++ b/WishLists/templates/mySpecificList.html
@@ -39,7 +39,7 @@
             <br>
             <form method="POST" action="{% url 'addPresents' numerListy %}">
                 {% csrf_token %}
-                <button class="btn btn-outline-dark btn-lg przyciskWelcome ">Dodaj prezenty</button>
+                <button class="btn rounded-pill btn-lg przyciskWelcome ">Dodaj prezenty</button>
             </form>
         </div>
         </p>
