--- a/UserProfiles/templates/profile/profile.html
+++ b/UserProfiles/templates/profile/profile.html
@@ -1,58 +1,114 @@
 {% extends "main/base.html" %}
 {% block title %} Profil - {{ user_username}} {% endblock %}
 {% block content %}
-			<section class="vh-100" style="background-color: #f4f5f7;">
-			  <div class="container py-5 h-100">
-				<div class="row d-flex justify-content-center align-items-center h-100">
-				  <div class="col col-lg-6 mb-4 mb-lg-0">
-					<div class="card mb-3" style="border-radius: .5rem;">
-					  <div class="row g-0">
-						<div class="col-md-4 gradient-custom text-center text-white"
-						  style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
-						  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-							alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
-						  <h5>Marie Horwitz</h5>
-						  <p>Web Designer</p>
-						  <i class="far fa-edit mb-5"></i>
-						</div>
-						<div class="col-md-8">
-						  <div class="card-body p-4">
-							<h6>Information</h6>
-							<hr class="mt-0 mb-4">
-							<div class="row pt-1">
-							  <div class="col-6 mb-3">
-								<h6>Email</h6>
-								<p class="text-muted">info@example.com</p>
-							  </div>
-							  <div class="col-6 mb-3">
-								<h6>Phone</h6>
-								<p class="text-muted">123 456 789</p>
-							  </div>
-							</div>
-							<h6>Projects</h6>
-							<hr class="mt-0 mb-4">
-							<div class="row pt-1">
-							  <div class="col-6 mb-3">
-								<h6>Recent</h6>
-								<p class="text-muted">Lorem ipsum</p>
-							  </div>
-							  <div class="col-6 mb-3">
-								<h6>Most Viewed</h6>
-								<p class="text-muted">Dolor sit amet</p>
-							  </div>
-							</div>
-							<div class="d-flex justify-content-start">
-							  <a href="#!"><i class="fab fa-facebook-f fa-lg me-3"></i></a>
-							  <a href="#!"><i class="fab fa-twitter fa-lg me-3"></i></a>
-							  <a href="#!"><i class="fab fa-instagram fa-lg"></i></a>
-							</div>
-						  </div>
-						</div>
-					  </div>
-					</div>
-				  </div>
-				</div>
-			  </div>
-			</section>
+<div class="container emp-profile">
+    <form method="post">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="profile-img">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/8.webp" class="rounded-circle mb-3"
+                         alt="Avatar"/>
+                    <!--                            <div class="file btn btn-lg btn-primary">-->
+                    <!--                                Change Photo-->
+                    <!--                                <input type="file" name="file"/>-->
+                    <!--                            </div>-->
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="profile-head">
+                    <h3 class="nazwaUzytkownika">
+                        {{ user_username }}
+                    </h3><br>
+                    <h5 class="daneUzytkownika fst-italic">
+                        {{ user_first_name }} {{ user_last_name }}
+                    </h5><br><br>
 
+                    <h5 class="daneUzytkownika">
+                        Posiada list: {{ lists_count }}
+                    </h5>
+                    <h5 class="daneUzytkownika">
+                        Znajomi: {{ friends_count }}
+                    </h5>
+                    <h5 class="daneUzytkownika">
+                        Dołączono: {{ user_date_joined | date:"d.m.Y"}}
+
+                    </h5>
+
+                </div>
+            </div>
+            <div class="col-md-3 ">
+                {% if user.username == user_username %}
+                <a href="edit/">
+                    <button type="button" class="btn btn-lg rounded-pill profilButtons">Edytuj profil</button>
+                </a>
+                {% elif user.is_authenticated %}
+
+                {% if friend_status == "Wysłano" %}
+                    <a href="unfriend/">
+                        <button type="button" class="btn btn-lg rounded-pill profilButtons">Anuluj zaproszenie</button>
+                    </a>
+
+                {% elif friend_status == "Oczekujące" %}
+
+                    <a href="accept-invite/">
+                        <button type="button" class="btn btn-lg rounded-pill profilButtons">Zaakceptuj zaproszenie</button>
+                    </a>
+
+                    <a href="unfriend/">
+                        <button type="button" class="btn btn-lg rounded-pill profilButtons">Usuń zaproszenie</button>
+                    </a>
+
+                {% elif friend_status == "Przyjaciele" %}
+
+                    <a href="unfriend/">
+                        <button type="button" class="btn btn-lg rounded-pill profilButtons">Usuń znajomego</button>
+                    </a>
+
+                {% else %}
+
+                    <a href="invite/">
+                        <button type="button" class="btn btn-lg rounded-pill profilButtons">Dodaj znajomego</button>
+                    </a>
+
+                {% endif %}
+                {% endif %}
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="profile-work">
+                    <br>
+                    <p>Ostatnio utworzone listy</p>
+                    <a href="">Website Link</a><br/>
+                    <a href="">Bootsnipp Profile</a><br/>
+                    <a href="">Bootply Profile</a>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="tab-content profile-tab" id="myTabContent">
+                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                        <br>
+                        <h3>Znajomi</h3>
+
+                        Lista znajomych:
+                        {% if friendsList %}
+                        <ul>
+                            {% for friend_username in friendsList %}
+                            <li>
+                                <a href="/profile/{{ friend_username }}">{{ friend_username }}</a>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                        {% endif %}
+                        {% if user.username == user_username %}
+                        <p><a href="/search-for-user/">Wyszukaj użytkownika</a></p>
+                        {% endif %}
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
